--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -6,18 +6,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title><%- title %></title>
-  <link rel="stylesheet" href="./assets/style/all.css">
+  <link rel="stylesheet" href="assets/style/all.css">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&family=Roboto+Mono:ital,wght@0,400;0,500;1,700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
-  <header class="header">
-    這是 header
+  <header>
+    <div class="header container">
+      <h1 class="logo"><a href="#">公司logo</a></h1>
+      <ul class="menu">
+        <li><a class="pr-64" href="#">系列鏡框</a></li>
+        <li><a class="pr-64" href="#">門市據點</a></li>
+        <li><a class="pr-64" href="#">部落格</a></li>
+        <li><a href="#">常見問題</a></li>
+      </ul>
+    </div>
   </header>
 
   <%- contents %>
 
-  <footer class="footer">
-    footer
+  <footer>
+    <div class="footer container">
+      <div class="footer-menu">
+        <div class="menu2">
+          <ul class="df">
+            <li><a class="pr-48" href="#">首頁</a></li>
+            <li><a class="pr-48" href="#">系列鏡框</a></li>
+            <li><a class="pr-48" href="#">門市據點</a></li>
+            <li><a class="pr-48" href="#">部落格</a></li>
+            <li class="mb-45"><a href="#">常見問題</a></li>
+          </ul>
+          <div class="footer-contact">
+            <ul class="fz-36-54">
+              <li>
+                <a href="tel:+886-8-00000000"><span class="material-symbols-outlined">
+                  call
+                  </span>0800-000-000</a>
+              </li>
+              <li class="mb-32">
+                <a href="mailto:glasses@business.com"><span class="material-symbols-outlined">
+                  mail
+                  </span>glasses@business.com</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="icon">
+          <ul class="df">
+            <li class="mr-32"><a href="#"><img src="./assets/images/ic-social-fb.png" alt="facebook"></a></li>
+            <li class="mr-32"><a href="#"><img src="./assets/images/ic_social_ig.png" alt="instagram"></a></li>
+            <li><a href="#"><img src="./assets/images/ic_social_line.png" alt="line"></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-copyright fz-16-24">
+        <p>Copyright © 2020 Glasses.All rights reserved.</p>
+        <ul>
+          <li class="fz-14-21"><a class="pr-48" href="#">隱私權政策</a></li>
+          <li class="fz-14-21"><a href="#">服務條款</a></li>
+        </ul>
+      </div>
+    </div>
   </footer>
   <script src="./assets/js/vendors.js"></script>
   <script src="./assets/js/all.js"></script>
